NetBSD Problem Report #50921

From www@NetBSD.org  Wed Mar  9 11:05:44 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 593857ABF7
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  9 Mar 2016 11:05:44 +0000 (UTC)
Message-Id: <20160309110543.87D197ACA1@mollari.NetBSD.org>
Date: Wed,  9 Mar 2016 11:05:43 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sbin/raidctl/rf_configure.c:512]: (error) Memory leak: table
X-Send-Pr-Version: www-1.0

>Number:         50921
>Category:       bin
>Synopsis:       src/sbin/raidctl/rf_configure.c:512]: (error) Memory leak: table
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 09 11:10:00 +0000 2016
>Closed-Date:    Wed Mar 09 20:36:47 +0000 2016
>Last-Modified:  Wed Mar 09 20:36:47 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160308
>Organization:
>Environment:
>Description:
Source code is

        if (table[i] == NULL) {
            warnx("rf_ReadSpareTable: Unable to allocate table");
            return (NULL);  /* XXX should cleanup too! */
        }

Suggest add missing call to free inside the if.



>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50921 CVS commit: src/sbin/raidctl
Date: Wed, 9 Mar 2016 14:53:32 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Mar  9 19:53:32 UTC 2016

 Modified Files:
 	src/sbin/raidctl: rf_configure.c

 Log Message:
 PR/50921: David Binderman: Fix memory leak


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/sbin/raidctl/rf_configure.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 09 Mar 2016 20:36:47 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.