PR/50921: David Binderman: Fix memory leak